# my-timeline

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_fix_issue.yaml  feature.md  feature_issue .yaml  feature_issue.yaml  implementation_issue.yml  task_issue.yaml
backend/: Cargo.toml
backend/migrations/: 20260310015755_create_users.sql
backend/src/: app_state.rs  common.rs  config.rs  lib.rs  modules.rs  routes.rs
backend/src/common/: auth.rs  error.rs  repository.rs  response.rs
backend/src/common/auth/: middleware.rs  model.rs  service.rs
backend/src/common/repository/: memories.rs  refresh_tokens.rs  user.rs
backend/src/config/: auth_storage.rs
backend/src/extractors/: current_user.rs
backend/src/modules/: memory.rs  users.rs
backend/src/modules/auth/: dto.rs  handler.rs  model.rs  service.rs
backend/src/modules/memories/: dto.rs  handler.rs  model.rs  service.rs
backend/src/modules/memory/: dto.rs  handler.rs  service.rs
backend/src/modules/users/: dto.rs  handler.rs  model.rs  repository.rs  service.rs
backend/src/routes/: auth.rs  memories.rs  memory.rs  users.rs
certs/: localhost+2-key.pem  localhost+2.pem
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/app/: App.tsx  main.tsx  router.tsx
frontend/src/config/: env.ts
frontend/src/contexts/: AppContext.tsx  AuthContext.tsx
frontend/src/layouts/: index.ts
frontend/src/lib/: api-client.ts  (+3 more)
src/: App.tsx
(+64 files in other folders)
