[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "chrono",
] }
dotenvy = "0.15"
thiserror = "2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
anyhow = "1.0"
time = "0.3"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
